force-app/main/default/objects/Assessment__c/Assessment__c.object-meta.xml
<CustomObject>
    <label>査定表</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>査定表名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>