force-app/main/default/objects/Assessment__c/fields/absb_airbag_right_back__c.field-meta.xml
<CustomField>
    <fullName>absb_airbag_right_back__c</fullName>
    <label>後部座席エアバッグ右</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>standard_01</valueSetName>
    </valueSet>
</CustomField>