force-app/main/default/objects/Assessment__c/fields/absb_driver__c.field-meta.xml
<CustomField>
    <fullName>absb_driver__c</fullName>
    <label>運転席エアバッグ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>standard_01</valueSetName>
    </valueSet>
</CustomField>