force-app/main/default/objects/Assessment__c/fields/absb_popup_hood__c.field-meta.xml
<CustomField>
    <fullName>absb_popup_hood__c</fullName>
    <label>ポップアップフード</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>standard_01</valueSetName>
    </valueSet>
</CustomField>