force-app/main/default/objects/Assessment__c/fields/absb_side_left__c.field-meta.xml
<CustomField>
    <fullName>absb_side_left__c</fullName>
    <label>サイドエアバッグ左</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>standard_01</valueSetName>
    </valueSet>
</CustomField>