force-app/main/default/objects/Assessment__c/fields/absb_sub__c.field-meta.xml
<CustomField>
    <fullName>absb_sub__c</fullName>
    <label>助手席エアバッグ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>standard_01</valueSetName>
    </valueSet>
</CustomField>