force-app/main/default/objects/Assessment__c/fields/absb_sub_knee__c.field-meta.xml
<CustomField>
    <fullName>absb_sub_knee__c</fullName>
    <label>助手席ニーエアバッグ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>standard_01</valueSetName>
    </valueSet>
</CustomField>