force-app/main/default/objects/Assessment__c/fields/account__c.field-meta.xml
<CustomField>
    <fullName>account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>査定表</relationshipLabel>
    <relationshipName>assessments_account</relationshipName>
    <type>Lookup</type>
</CustomField>