force-app/main/default/objects/Assessment__c/fields/air_condition__c.field-meta.xml
<CustomField>
    <fullName>air_condition__c</fullName>
    <label>冷房</label>
    <length>255</length>
    <type>Text</type>
</CustomField>