force-app/main/default/objects/Assessment__c/fields/asses_date__c.field-meta.xml
<CustomField>
    <fullName>asses_date__c</fullName>
    <label>査定年月日</label>
    <type>DateTime</type>
</CustomField>