force-app/main/default/objects/Assessment__c/fields/assess_tokki__c.field-meta.xml
<CustomField>
    <fullName>assess_tokki__c</fullName>
    <label>査定時特記事項等記入欄</label>
    <type>TextArea</type>
</CustomField>