force-app/main/default/objects/Assessment__c/fields/Assessment_outside__c.field-meta.xml
<CustomField>
    <fullName>Assessment_outside__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>社外共有用査定表</label>
    <referenceTo>Assessment_outside__c</referenceTo>
    <relationshipLabel>査定表</relationshipLabel>
    <relationshipName>Assessment_outside</relationshipName>
    <type>Lookup</type>
</CustomField>