force-app/main/default/objects/Assessment__c/fields/Assessment_outside_owner__c.field-meta.xml
<CustomField>
    <fullName>Assessment_outside_owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>社外共有用査定表の所有者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UsersUnderAssessment_outside</relationshipName>
    <type>Lookup</type>
</CustomField>