force-app/main/default/objects/Assessment__c/fields/asset_mngno__c.field-meta.xml
<CustomField>
    <fullName>asset_mngno__c</fullName>
    <externalId>true</externalId>
    <label>査定表管理No.</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>