force-app/main/default/objects/Assessment__c/fields/auc_buy_condition__c.field-meta.xml
<CustomField>
    <fullName>auc_buy_condition__c</fullName>
    <label>買取条件</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>一時抹消</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>名義変更</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>