force-app/main/default/objects/Assessment__c/fields/Auc_compe_price_txt__c.field-meta.xml
<CustomField>
    <fullName>Auc_compe_price_txt__c</fullName>
    <label>競合金額txt</label>
    <type>TextArea</type>
</CustomField>