force-app/main/default/objects/Assessment__c/fields/Auc_competitor_txt__c.field-meta.xml
<CustomField>
    <fullName>Auc_competitor_txt__c</fullName>
    <label>競合数txt</label>
    <type>TextArea</type>
</CustomField>