force-app/main/default/objects/Assessment__c/fields/auc_hanbai_date__c.field-meta.xml
<CustomField>
    <fullName>auc_hanbai_date__c</fullName>
    <label>販売月</label>
    <length>255</length>
    <type>Text</type>
</CustomField>