force-app/main/default/objects/Assessment__c/fields/auc_kibo_price__c.field-meta.xml
<CustomField>
    <fullName>auc_kibo_price__c</fullName>
    <label>先方希望額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>