force-app/main/default/objects/Assessment__c/fields/Auc_kibo_price_txt__c.field-meta.xml
<CustomField>
    <fullName>Auc_kibo_price_txt__c</fullName>
    <label>先方希望額txt</label>
    <type>TextArea</type>
</CustomField>