force-app/main/default/objects/Assessment__c/fields/auc_other__c.field-meta.xml
<CustomField>
    <fullName>auc_other__c</fullName>
    <label>その他</label>
    <length>255</length>
    <type>Text</type>
</CustomField>