force-app/main/default/objects/Assessment__c/fields/auc_repair_market_price__c.field-meta.xml
<CustomField>
    <fullName>auc_repair_market_price__c</fullName>
    <label>修復歴相場</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>