force-app/main/default/objects/Assessment__c/fields/Auc_repair_price_txt__c.field-meta.xml
<CustomField>
    <fullName>Auc_repair_price_txt__c</fullName>
    <label>修理金額txt</label>
    <type>TextArea</type>
</CustomField>