force-app/main/default/objects/Assessment__c/fields/Auc_sales_price_txt__c.field-meta.xml
<CustomField>
    <fullName>Auc_sales_price_txt__c</fullName>
    <label>売り金額txt</label>
    <type>TextArea</type>
</CustomField>