force-app/main/default/objects/Assessment__c/fields/Auc_submit_price_txt__c.field-meta.xml
<CustomField>
    <fullName>Auc_submit_price_txt__c</fullName>
    <label>提示金額txt</label>
    <type>TextArea</type>
</CustomField>