force-app/main/default/objects/Assessment__c/fields/BC__c.field-meta.xml
<CustomField>
    <fullName>BC__c</fullName>
    <description>買取商談作成・更新時に使用</description>
    <label>BC区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bプラス</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>