force-app/main/default/objects/Assessment__c/fields/Bid_limit__c.field-meta.xml
<CustomField>
    <fullName>Bid_limit__c</fullName>
    <label>入札期限</label>
    <type>Date</type>
</CustomField>