force-app/main/default/objects/Assessment__c/fields/car_grade__c.field-meta.xml
<CustomField>
    <fullName>car_grade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>グレード</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.car_model__c</field>
            <operation>equals</operation>
            <valueField>Mst_Grades__c.model__c</valueField>
        </filterItems>
        <filterItems>
            <field>Mst_Grades__c.disp_flg__c</field>
            <operation>equals</operation>
            <value>表示する</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Mst_Grades__c</referenceTo>
    <relationshipLabel>査定表</relationshipLabel>
    <relationshipName>assessments_grade</relationshipName>
    <type>Lookup</type>
</CustomField>