force-app/main/default/objects/Assessment__c/fields/car_hist_other__c.field-meta.xml
<CustomField>
    <fullName>car_hist_other__c</fullName>
    <label>車歴その他</label>
    <length>255</length>
    <type>Text</type>
</CustomField>