force-app/main/default/objects/Assessment__c/fields/car_maker__c.field-meta.xml
<CustomField>
    <fullName>car_maker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>メーカ</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Mst_Makers__c.disp_flg__c</field>
            <operation>equals</operation>
            <value>表示する</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Mst_Makers__c</referenceTo>
    <relationshipLabel>査定表</relationshipLabel>
    <relationshipName>assessments_car_maker</relationshipName>
    <type>Lookup</type>
</CustomField>