force-app/main/default/objects/Assessment__c/fields/Car_model_text__c.field-meta.xml
<CustomField>
    <fullName>Car_model_text__c</fullName>
    <description>長谷川</description>
    <label>【車種】</label>
    <length>30</length>
    <type>Text</type>
</CustomField>