force-app/main/default/objects/Assessment__c/fields/car_number__c.field-meta.xml
<CustomField>
    <fullName>car_number__c</fullName>
    <label>ナンバー記入欄</label>
    <length>255</length>
    <type>Text</type>
</CustomField>