force-app/main/default/objects/Assessment__c/fields/car_type__c.field-meta.xml
<CustomField>
    <fullName>car_type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>型式</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.car_model__c</field>
            <operation>equals</operation>
            <valueField>Mst_Types__c.model__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Mst_Types__c</referenceTo>
    <relationshipLabel>査定表</relationshipLabel>
    <relationshipName>assest_types</relationshipName>
    <type>Lookup</type>
</CustomField>