force-app/main/default/objects/Assessment__c/fields/CarTax__c.field-meta.xml
<CustomField>
    <fullName>CarTax__c</fullName>
    <description>長谷川</description>
    <label>自動車税相当額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>