force-app/main/default/objects/Assessment__c/fields/cell__c.field-meta.xml
<CustomField>
    <fullName>cell__c</fullName>
    <label>セル</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>まわる</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>まわらない</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>確認できず</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>