force-app/main/default/objects/Assessment__c/fields/center_console_url__c.field-meta.xml
<CustomField>
    <fullName>center_console_url__c</fullName>
    <label>センターコンソールURL</label>
    <type>Url</type>
</CustomField>