force-app/main/default/objects/Assessment__c/fields/change_sobi__c.field-meta.xml
<CustomField>
    <fullName>change_sobi__c</fullName>
    <label>装備変更</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>umu</valueSetName>
    </valueSet>
</CustomField>