force-app/main/default/objects/Assessment__c/fields/changed_conpany_stamp__c.field-meta.xml
<CustomField>
    <fullName>changed_conpany_stamp__c</fullName>
    <label>交換業者の社印</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>umu</valueSetName>
    </valueSet>
</CustomField>