force-app/main/default/objects/Assessment__c/fields/changed_kisai__c.field-meta.xml
<CustomField>
    <fullName>changed_kisai__c</fullName>
    <label>交換歴の記載</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>umu</valueSetName>
    </valueSet>
</CustomField>