force-app/main/default/objects/Assessment__c/fields/ChukosyabuNyusatsu__c.field-meta.xml
<CustomField>
    <fullName>ChukosyabuNyusatsu__c</fullName>
    <defaultValue>false</defaultValue>
    <description>九條</description>
    <label>中古車部入札会案件</label>
    <type>Checkbox</type>
</CustomField>