force-app/main/default/objects/Assessment__c/fields/color__c.field-meta.xml
<CustomField>
    <fullName>color__c</fullName>
    <label>カラー</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>パール系</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>ホワイト系</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>イエロー系</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>オレンジ系</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>レッド系</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>ピンク系</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>パープル系</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>ブルー系</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>グリーン系</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>ブラウン系</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>ベージュ系</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>ゴールド系</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>シルバー系</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>グレー系</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>ブラック系</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>現車</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>