force-app/main/default/objects/Assessment__c/fields/color_no__c.field-meta.xml
<CustomField>
    <fullName>color_no__c</fullName>
    <label>カラーNo.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>