force-app/main/default/objects/Assessment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先担当者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>査定表</relationshipLabel>
    <relationshipName>assessments_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>