force-app/main/default/objects/Assessment__c/fields/damage_other__c.field-meta.xml
<CustomField>
    <fullName>damage_other__c</fullName>
    <label>ダメージその他</label>
    <length>255</length>
    <type>Text</type>
</CustomField>