force-app/main/default/objects/Assessment__c/fields/dmg_asi_left_back_x__c.field-meta.xml
<CustomField>
    <fullName>dmg_asi_left_back_x__c</fullName>
    <label>足回り左後座標X</label>
    <length>255</length>
    <type>Text</type>
</CustomField>