force-app/main/default/objects/Assessment__c/fields/dmg_asi_left_front_y__c.field-meta.xml
<CustomField>
    <fullName>dmg_asi_left_front_y__c</fullName>
    <label>足回り左前座標Y</label>
    <length>255</length>
    <type>Text</type>
</CustomField>