force-app/main/default/objects/Assessment__c/fields/dmg_asi_right_front_reason__c.field-meta.xml
<CustomField>
    <fullName>dmg_asi_right_front_reason__c</fullName>
    <description>再学習用</description>
    <label>足回り右前</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>〇</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>×</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>後退</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>？</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>---</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>