force-app/main/default/objects/Assessment__c/fields/dmg_asi_right_front_width__c.field-meta.xml
<CustomField>
    <fullName>dmg_asi_right_front_width__c</fullName>
    <label>足回り右前標横幅</label>
    <length>255</length>
    <type>Text</type>
</CustomField>