force-app/main/default/objects/Assessment__c/fields/dmg_back_panel__c.field-meta.xml
<CustomField>
    <fullName>dmg_back_panel__c</fullName>
    <label>バックパネル</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>okng_hanyo</valueSetName>
    </valueSet>
</CustomField>