force-app/main/default/objects/Assessment__c/fields/dmg_door_left_back_reason__c.field-meta.xml
<CustomField>
    <fullName>dmg_door_left_back_reason__c</fullName>
    <description>再学習用</description>
    <label>ドア左後</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>〇</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>×</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>へこみ</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>傷</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>へこみ傷</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>---</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>